--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "serve": "^14.0.1",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
